<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yaphetzhao.glidecatchsimple.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/yaphetzhao_glidecatchsimple"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/zhu" />

    <Button
        android:id="@+id/btn_catch_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glide" />

    <Button
        android:id="@+id/btn_catch_clean_disk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glide_clean" />

    <Button
        android:id="@+id/btn_catch_clean_disk_self"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glide_clean_catch_disk_self" />

    <Button
        android:id="@+id/btn_catch_clean_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glide_catch_memory" />

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />

</LinearLayout>
